[project]
authors = [{ name = "BartSte" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []
description = "Tools for Python"
keywords = ["tools", "python", "helpers", "utilities", "general"]
license = { file = "LICENSE" }
name = "pygeneral"
readme = "README.md"
requires-python = ">=3.12"
version = "1.1.1"

[dependency-groups]
dev = ["ipdb", "ipython", "pytest", "pre-commit"]

[project.scripts]
lensort = "pygeneral._cli.lensort:main"

# Build system configuration

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pygeneral"]

# Linter, formatter, type checker, and test configurations from here on

[tool.pyright]
include = ["src/pygeneral", "tests"]
exclude = ["**/__pycache__", ".git", ".pytest_cache", "extras"]
ignore = []
defineConstant = {}

reportImplicitStringConcatenation = false
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedCallResult = false

pythonVersion = "3.13"

[tool.ruff]
line-length = 80

select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "N", # PEP8 naming
]

[tool.pytest.ini_options]
addopts = "-s -rA --log-level INFO"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ipdb]
context = 9
